--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -278,7 +278,7 @@
         "logoPreviewAlt": "logo preview",
         "sliderPreviewAlt": "slider preview",
         "sliderImagesTitle": "Slider images (up to {{count}})",
-        "slotNumber": "Slot #{{index}}",
+        "slotNumber": "Image #{{index}}",
         "upload": "Upload",
         "uploading": "Uploading…"
     }
