--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -43,7 +43,7 @@
     "TeacherCourse.courseDetails": "تفاصيل الدورة",
     "TeacherCourse.classes-students": "الحصص / الطلاب",
     "TeacherCourse.TeacherCoursePk": "رقم الدورة",
-    "TeacherCourse.Name": "اسم الدورة",
+    "TeacherCourse.Name": "اسم المنهج",
     "TeacherCourse.students": "الطلاب المسجلين في الدورة",
     "TeacherCourse.AcademicYear": "السنة الدراسية",
     "TeacherCourse.AcademicTerm": "الفصل الدراسي",
@@ -95,6 +95,9 @@
     "Class.LocationStartLong": "خط طول البداية",
     "Class.LocationEndLat": "خط عرض النهاية",
     "Class.LocationEndLong": "خط طول النهاية",
+    "Class.CancelClassReason": "سبب إلغاء الحصة",
+    "Class.CenterCarFlag" :"تم التوصيل بسيارة المركز",
+    "Class.CenterCarCost" :"تكلفة التوصيل",
     "CourseStudent.Students": "الطلاب",
     "CourseStudent.SelectStudent": "اختر الطالب",
     "CourseStudent.CourseStudentPk": "رقم الطالب",
@@ -199,6 +202,7 @@
     "Reports.Types.Attendance": "الحضور",
     "Reports.Types.Payments": "المدفوعات",
     "Reports.Types.TeacherCourses": "دورات المعلم",
+    "Reports.Types.TransportationCosts": "تكاليف الإنتقالات",
     "Footer.Contact": "تواصل معنا",
     "Footer.Email": "البريد الإلكتروني",
     "Footer.Phone": "الهاتف",
