--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -9,7 +9,7 @@
     "logout": "تسجيل الخروج",
     "forgetPassword": "نسيت كلمة المرور",
     "home": "الرئيسية",
-    "courses": "الدورات",
+    "courses": "المنهج",
     "users": "المستخدمين",
     "financial-transactions": "المعاملات المالية",
     "reports": "التقارير", 
