--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -95,6 +95,9 @@
     "Class.LocationStartLong": "Start Longitude",
     "Class.LocationEndLat": "End Latitude",
     "Class.LocationEndLong": "End Longitude",
+    "Class.CancelClassReason": "Cancel Class Reason",
+    "Class.CenterCarFlag" :"Center Car Provided",
+    "Class.CenterCarCost" :"Center Car Cost",
     "CourseStudent.Students": "Students",
     "CourseStudent.SelectStudent": "Select Student",
     "CourseStudent.CourseStudentPk": "Student ID",
