--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -203,6 +203,7 @@
     "Reports.Types.Payments": "المدفوعات",
     "Reports.Types.TeacherCourses": "دورات المعلم",
     "Reports.Types.TransportationCosts": "تكاليف الإنتقالات",
+    "Reports.Types.Classes": "الحصص",
     "Footer.Contact": "تواصل معنا",
     "Footer.Email": "البريد الإلكتروني",
     "Footer.Phone": "الهاتف",
