--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -203,6 +203,7 @@
     "Reports.Types.Payments": "Payments",
     "Reports.Types.TeacherCourses": "Courses",
     "Reports.Types.TransportationCosts": "Transportation Costs",
+    "Reports.Types.Classes": "Classes",
     "Footer.Copyright": "Copyright © {{year}} All rights reserved",
     "Footer.Contact": "Contact",
     "Footer.Email": "Email",
