--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -17,6 +17,10 @@
     "delete": "حذف",
     "createInsert": "جديد",
     "commit": "حفظ",
+    "SelectAll": "الكل",
+    "UnselectAll": "إلغاء الكل",
+    "SendWhatsApp": "إرسال واتساب",
+    "excel": "إكسيل",
     "label.ok": "موافق",
     "label.cancel": "إلغاء",
     "label.reset": "إعادة تعيين",
@@ -121,7 +125,7 @@
     "User.Password": "كلمة المرور",
     "User.Email": "البريد الإلكتروني",
     "User.Phone": "رقم الجوال",
-    "User.WhatsApp": "واتساب",
+    "User.WhatsApp": "رقم الواتساب",
     "User.Gender": "النوع",
     "User.Nationality": "الجنسية",
     "User.UserType": "نوع المستخدم",
@@ -191,7 +195,7 @@
     "Reports.StartDate": "تاريخ البداية",
     "Reports.EndDate": "تاريخ النهاية",
     "Reports.Date": "التاريخ",
-    "Reports.Course": "الدورة",
+    "Reports.Course": "المنهج",
     "Reports.Teacher": "المعلم",
     "Reports.Student": "الطالب",
     "Reports.User": "المستخدم",
@@ -254,7 +258,7 @@
     "Organization.PhoneNumber1":" رقم الهاتف 1",
     "Organization.PhoneNumber2":" رقم الهاتف 2",
     "Organization.PhoneNumber3":" رقم الهاتف 3",
-    "Organization.WhatsappNumber": "واتساب",
+    "Organization.WhatsappNumber": "رقم الواتساب",
     "Organization.LogoUrl": "شعار المركز",
     "Organization.StatusFl": "الحالة",
     "Organization.JoiningDate": "تاريخ الانضمام",
@@ -287,7 +291,123 @@
         "slotNumber": "صورة #{{index}}",
         "upload": "رفع",
         "uploading": "جارٍ الرفع…"
-    }
+    },
+    "privacy.title": "سياسة الخصوصية",
+    "privacy.lastUpdated": "آخر تحديث: {{date}}",
+    "privacy.tocLabel": "فهرس",
+    "privacy.toc.intro": "المقدمة",
+    "privacy.toc.data": "البيانات التي نجمعها",
+    "privacy.toc.use": "كيفية الاستخدام",
+    "privacy.toc.share": "مشاركة البيانات",
+    "privacy.toc.retention": "الاحتفاظ بالبيانات",
+    "privacy.toc.security": "الأمان",
+    "privacy.toc.rights": "حقوقك",
+    "privacy.toc.children": "الأطفال",
+    "privacy.toc.international": "النقل الدولي",
+    "privacy.toc.changes": "التغييرات",
+    "privacy.toc.contact": "التواصل",
+
+    "privacy.sections.intro.title": "المقدمة",
+    "privacy.sections.intro.body": "توضح هذه السياسة كيفية قيام <strong>المؤسسة</strong> بجمع بياناتك الشخصية ومعالجتها عند استخدامك لتطبيق <strong>مركز الخريطيات التعليمي</strong>. باستخدامك للتطبيق، فإنك توافق على بنود هذه السياسة.",
+
+    "privacy.sections.data.title": "البيانات التي نجمعها",
+    "privacy.sections.data.items.account": "بيانات الحساب: الاسم، البريد الإلكتروني، رقم الجوال (إن وُجد).",
+    "privacy.sections.data.items.usage": "بيانات الاستخدام والجهاز: نوع الجهاز، إصدار النظام، لغة الواجهة، بيانات الأعطال والأداء.",
+    "privacy.sections.data.items.userContent": "محتوى يرسله المستخدم: ملاحظات أو مرفقات داخل التطبيق.",
+    "privacy.sections.data.items.identifiers": "المعرفات: رمز الإشعارات (Device Token) لاستلام التنبيهات.",
+    "privacy.sections.data.note": "لا نجمع موقعك الدقيق، ولا نبيع بياناتك لأي طرف ثالث.",
+
+    "privacy.sections.use.title": "كيفية استخدامنا لبياناتك",
+    "privacy.sections.use.items.core": "تقديم الميزات الأساسية للتطبيق وتحسين التجربة.",
+    "privacy.sections.use.items.notifications": "إرسال التنبيهات بعد الحصول على الأذونات اللازمة.",
+    "privacy.sections.use.items.analytics": "تحليل الأداء وإصلاح الأخطاء وتقديم الدعم الفني.",
+    "privacy.sections.use.items.legal": "الامتثال للالتزامات القانونية.",
+
+    "privacy.sections.share.title": "مشاركة البيانات",
+    "privacy.sections.share.items.providers": "مزودو الخدمة وفق اتفاقيات تحفظ السرية.",
+    "privacy.sections.share.items.legal": "الاستجابة للطلبات القانونية الملزمة.",
+    "privacy.sections.share.note": "لا نشارك بياناتك لأغراض تسويقية دون موافقتك الصريحة.",
+
+    "privacy.sections.retention.title": "الاحتفاظ بالبيانات",
+    "privacy.sections.retention.body": "نحتفظ ببياناتك فقط للمدة اللازمة لتقديم الخدمة، ثم نحذفها أو نجري لها إخفاء هوية وفقًا للقانون.",
+
+    "privacy.sections.security.title": "الأمان",
+    "privacy.sections.security.body": "نتخذ تدابير مناسبة لحماية بياناتك.",
+
+    "privacy.sections.rights.title": "حقوقك",
+    "privacy.sections.rights.items.access": "الاطلاع على بياناتك أو تصحيحها أو حذفها وفق القانون.",
+    "privacy.sections.rights.items.notifications": "إيقاف الإشعارات من إعدادات النظام/التطبيق.",
+    "privacy.sections.rights.items.deletion": "طلب إلغاء الحساب وحذف البيانات غير المطلوبة قانونيًا.",
+    "privacy.sections.rights.contact": "لطلب أي من الحقوق أعلاه، راسلنا على البريد المخصص للدعم.",
+
+    "privacy.sections.children.title": "الأطفال",
+    "privacy.sections.children.body": "الخدمة موجهة لمستخدمين بسن قانوني. تواصل معنا إذا تم جمع بيانات طفل بالخطأ.",
+
+    "privacy.sections.international.title": "النقل الدولي",
+    "privacy.sections.international.body": "قد تُعالَج البيانات على خوادم خارج بلدك مع ضمانات مناسبة لحماية الخصوصية.",
+    "privacy.sections.changes.title": "التغييرات على هذه السياسة",
+    "privacy.sections.changes.body": "قد نقوم بتحديث هذه السياسة من وقت لآخر، وسنخطرك بالتغييرات الجوهرية.",
+    "deleteAccountTitle": "طلب حذف الحساب",
+    "deleteAccountInstruction": "يرجى إدخال اسم المستخدم وكلمة المرور لتأكيد رغبتك في حذف الحساب.",
+    "deleteAccountUsername": "اسم المستخدم",
+    "deleteAccountPassword": "كلمة المرور",
+    "deleteAccountConfirmData": "تأكيد البيانات",
+    "deleteAccountUserData": "بيانات الحساب",
+    "deleteAccountFullName": "الاسم الكامل",
+    "deleteAccountEmail": "البريد الإلكتروني",
+    "deleteAccountFinalDelete": "حذف الحساب نهائيًا",
+    "deleteAccountDialogTitle": "تأكيد الحذف",
+    "deleteAccountDialogText": "هل أنت متأكد أنك تريد حذف الحساب نهائيًا؟",
+    "deleteAccountDialogConfirm": "نعم، احذف",
+    "deleteAccountDialogCancel": "إلغاء",
+    "deleteAccountSuccessTitle": "تم الحذف",
+    "deleteAccountSuccessMessage": "تم حذف الحساب بنجاح.",
+    "deleteAccountErrorLogin": "بيانات الدخول غير صحيحة.",
+    "deleteAccountErrorDelete": "حدث خطأ أثناء الحذف."  ,
+    "tracking.tracking": "تتبع",
+    "dailyClass.selectDate": "اختر التاريخ" ,
+    "payment.payment": "الدفع",
+    "payment.payments": "المدفوعات",
+    "payment.studentId": "رقم الطالب",
+    "payment.student": "الطالب",
+    "payment.teacher": "المعلم",
+    "payment.teacherId": "رقم المعلم",
+    "payment.pay": "دفع",
+    "payment.invoices": "الفواتير",
+    "communication.communication": "التواصل",
+    "communication.title": "إرسال الرسائل",
+    "communication.search": "بحث بالاسم أو الرقم",
+    "communication.selectAll": "تحديد الكل",
+    "communication.unselectAll": "إلغاء التحديد",
+    "communication.selectedCount": "عدد المختارين",
+    "communication.messagePlaceholder": "اكتب الرسالة هنا...",
+    "communication.send": "إرسال الرسالة",
+    "communication.sending": "جاري الإرسال...",
+    "communication.success": "تم الإرسال بنجاح",
+    "communication.error": "حدث خطأ أثناء الإرسال",
+    "communication.usersList": "قائمة المستخدمين",
+    "communication.messageBox": "صندوق الرسالة",
+    "communication.noUsersFound": "لا يوجد مستخدمين حسب البحث",
+    "communication.loadingUsers": "جاري تحميل المستخدمين...",
+    "communication.noPhone": "لا يوجد رقم هاتف",
+    "communication.confirmSend": "هل تريد إرسال الرسالة للمستخدمين المختارين؟",
+    "communication.cancel": "إلغاء",
+    "communication.ok": "موافق",
+    "communication.requiredMessage": "لا يمكن إرسال رسالة فارغة",
+    "communication.admins": "مديرين",
+    "communication.teachers": "مدرّسين",
+    "communication.students": "طلاب",
+    "communication.totalCount": "إجمالي المستخدمين"
+
+
+
+
+
+
+
+                        
+
+        
 
 
 
