--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -17,6 +17,10 @@
     "delete": "Delete",
     "createInsert": "New",
     "commit": "Commit",
+    "SelectAll": "Select All",
+    "UnselectAll": "Unselect All",
+    "SendWhatsApp": "Send WhatsApp",
+    "excel": "Excel",
     "label.ok": "OK",
     "label.cancel": "Cancel",
     "label.reset": "Reset",
@@ -254,7 +258,7 @@
      "Organization.PhoneNumber1":"Phone Number 1",
     "Organization.PhoneNumber2":"Phone Number 2",
     "Organization.PhoneNumber3":"Phone Number 3",
-    "Organization.WhatsappNumber": "WhatsApp",
+    "Organization.WhatsappNumber": "WhatsApp Number",
     "Organization.LogoUrl": "Logo URL",
     "Organization.StatusFl": "Status",
     "Organization.JoiningDate": "Joining Date",
@@ -287,6 +291,114 @@
         "slotNumber": "Image #{{index}}",
         "upload": "Upload",
         "uploading": "Uploading…"
-    }
+    },
+    "privacy.title": "Privacy Policy",
+  "privacy.lastUpdated": "Last updated: {{date}}",
+  "privacy.tocLabel": "Table of contents",
+  "privacy.toc.intro": "Introduction",
+  "privacy.toc.data": "Data We Collect",
+  "privacy.toc.use": "How We Use Your Data",
+  "privacy.toc.share": "Data Sharing",
+  "privacy.toc.retention": "Data Retention",
+  "privacy.toc.security": "Security",
+  "privacy.toc.rights": "Your Rights",
+  "privacy.toc.children": "Children",
+  "privacy.toc.international": "International Transfers",
+  "privacy.toc.changes": "Changes",
+  "privacy.toc.contact": "Contact",
+
+  "privacy.sections.intro.title": "Introduction",
+  "privacy.sections.intro.body": "This policy explains how <strong>the Organization</strong> collects and processes your personal data when you use <strong>AL-Kharaitiyat Educational Center</strong>. By using the app, you agree to the terms of this policy.",
+
+  "privacy.sections.data.title": "Data We Collect",
+  "privacy.sections.data.items.account": "Account data: name, email, and phone number (if provided).",
+  "privacy.sections.data.items.usage": "Usage & device data: device type, OS version, UI language, crash and performance data.",
+  "privacy.sections.data.items.userContent": "User-submitted content: notes or attachments you upload in the app.",
+  "privacy.sections.data.items.identifiers": "Identifiers: notification token (Device Token) to deliver push/local notifications.",
+  "privacy.sections.data.note": "We do not collect your precise location and we do not sell your data to third parties.",
+
+  "privacy.sections.use.title": "How We Use Your Data",
+  "privacy.sections.use.items.core": "Provide core app features and improve your experience.",
+  "privacy.sections.use.items.notifications": "Send local/push notifications after obtaining the necessary permissions.",
+  "privacy.sections.use.items.analytics": "Analyze performance, fix issues, and provide support.",
+  "privacy.sections.use.items.legal": "Comply with applicable legal obligations.",
+
+  "privacy.sections.share.title": "Data Sharing",
+  "privacy.sections.share.items.providers": "Service providers under confidentiality agreements (e.g., notifications or analytics).",
+  "privacy.sections.share.items.legal": "Disclosures required to comply with the law or legal processes.",
+  "privacy.sections.share.note": "We do not share your data with third parties for marketing purposes without your explicit consent.",
+
+  "privacy.sections.retention.title": "Data Retention",
+  "privacy.sections.retention.body": "We retain your data only as long as necessary to provide the service and for the purposes described here, then delete or anonymize it according to applicable laws and standards.",
+
+  "privacy.sections.security.title": "Security",
+  "privacy.sections.security.body": "We apply appropriate technical and organizational measures to protect your data.",
+
+  "privacy.sections.rights.title": "Your Rights",
+  "privacy.sections.rights.items.access": "Access, rectify, or delete your data subject to applicable law.",
+  "privacy.sections.rights.items.notifications": "Disable notifications at any time from system/app settings.",
+  "privacy.sections.rights.items.deletion": "Request account deletion and removal of data not required by law.",
+  "privacy.sections.rights.contact": "To exercise any of the above rights, please contact us via the support email.",
+
+  "privacy.sections.children.title": "Children",
+  "privacy.sections.children.body": "Our services are intended for users of an appropriate legal age. If you believe we collected a child’s data without proper consent, contact us to take appropriate action.",
+
+  "privacy.sections.international.title": "International Transfers",
+  "privacy.sections.international.body": "Your data may be processed on servers outside your country with appropriate safeguards in place to protect your privacy.",
+
+  "privacy.sections.changes.title": "Changes to This Policy",
+  "privacy.sections.changes.body": "We may update this policy from time to time. We will notify you of material changes via the app or email.",
+  "deleteAccountTitle": "Delete Account Request",
+  "deleteAccountInstruction": "Please enter your username and password to confirm your request to delete the account.",
+  "deleteAccountUsername": "Username",
+  "deleteAccountPassword": "Password",
+  "deleteAccountConfirmData": "Confirm Data",
+  "deleteAccountUserData": "Account Information",
+  "deleteAccountFullName": "Full Name",
+  "deleteAccountEmail": "Email",
+  "deleteAccountFinalDelete": "Delete Account Permanently",
+  "deleteAccountDialogTitle": "Confirm Deletion",
+  "deleteAccountDialogText": "Are you sure you want to permanently delete your account?",
+  "deleteAccountDialogConfirm": "Yes, delete",
+  "deleteAccountDialogCancel": "Cancel",
+  "deleteAccountSuccessTitle": "Deleted",
+  "deleteAccountSuccessMessage": "Your account has been successfully deleted.",
+  "deleteAccountErrorLogin": "Invalid username or password.",
+  "deleteAccountErrorDelete": "An error occurred while deleting the account.",
+  "tracking.tracking": "Tracking",
+  "dailyClass.selectDate_en": "Select Date",
+  "payment.payment": "Payment",
+  "payment.payments": "Payments",
+  "payment.studentId": "Student ID",
+  "payment.student": "Student",
+  "payment.teacher": "Teacher",
+  "payment.teacherId": "Teacher ID",
+  "payment.pay": "Pay",
+  "payment.invoices": "Invoices",
+  "communication.communication": "Communication",
+  "communication.title": "Send Messages",
+  "communication.search": "Search by name or number",
+  "communication.selectAll": "Select All",
+  "communication.unselectAll": "Unselect All",
+  "communication.selectedCount": "Selected Count",
+  "communication.messagePlaceholder": "Write your message here...",
+  "communication.send": "Send Message",
+  "communication.sending": "Sending...",
+  "communication.success": "Message sent successfully",
+  "communication.error": "An error occurred while sending",
+  "communication.usersList": "Users List",
+  "communication.messageBox": "Message Box",
+  "communication.noUsersFound": "No users found",
+  "communication.loadingUsers": "Loading users...",
+  "communication.noPhone": "No phone number",
+  "communication.confirmSend": "Do you want to send the message to the selected users?",
+  "communication.cancel": "Cancel",
+  "communication.ok": "OK",
+  "communication.requiredMessage": "Message cannot be empty",
+  "communication.admins": "Admins",
+  "communication.teachers": "Teachers",
+  "communication.students": "Students",
+  "communication.totalCount": "Total Users"
+
 
 }
