--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -20,6 +20,7 @@
     "SelectAll": "Select All",
     "UnselectAll": "Unselect All",
     "SendWhatsApp": "Send WhatsApp",
+    "SendWhatsAppToTeacher": "Send WhatsApp to Teacher",
     "excel": "Excel",
     "label.ok": "OK",
     "label.cancel": "Cancel",
