--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -20,6 +20,7 @@
     "SelectAll": "الكل",
     "UnselectAll": "إلغاء الكل",
     "SendWhatsApp": "إرسال واتساب",
+    "SendWhatsAppToTeacher": "إرسال واتساب للمعلم",
     "excel": "إكسيل",
     "label.ok": "موافق",
     "label.cancel": "إلغاء",
