--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -399,6 +399,14 @@
     "communication.teachers": "مدرّسين",
     "communication.students": "طلاب",
     "communication.totalCount": "إجمالي المستخدمين",
+    "communication.noWhatsappNumberDescription": "لا يمكن إرسال الرسالة لأن المستخدم لا يمتلك رقم واتساب مسجل.",
+    "communication.noValidUsersToSend": "لا يوجد أي مستخدم يمتلك رقم واتساب صالح للإرسال.",
+    "communication.removedUsers": "تم استبعاد {{count}} مستخدم لعدم امتلاكهم رقم واتساب.",
+    "communication.sendingTitle": "جاري الإرسال",
+    "communication.sendingToUsers": "جاري إرسال الرسائل إلى {{count}} مستخدم...",
+    "communication.broadcastSuccess": "تم إرسال الرسائل الجماعية بنجاح.",
+    "communication.warningTitle": "تنبيه",
+    "communication.successTitle": "نجاح",
     "whatsapp.previewTitle": "معاينة رسالة واتساب",
     "whatsapp.editMessageForReceiver": "تعديل الرسالة للمتسلم",
     "buttons.cancel": "إلغاء",
