--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -400,6 +400,14 @@
   "communication.teachers": "Teachers",
   "communication.students": "Students",
   "communication.totalCount": "Total Users",
+  "communication.noWhatsappNumberDescription": "Message cannot be sent because the selected user does not have a registered WhatsApp number.",
+  "communication.noValidUsersToSend": "No valid users found with a WhatsApp number.",
+  "communication.removedUsers": "{{count}} users were skipped due to missing WhatsApp numbers.",
+  "communication.sendingTitle": "Sending",
+  "communication.sendingToUsers": "Sending messages to {{count}} users...",
+  "communication.broadcastSuccess": "Broadcast messages sent successfully.",
+  "communication.warningTitle": "Warning",
+  "communication.successTitle": "Success",
   "whatsapp.previewTitle": "WhatsApp Message Preview",
   "whatsapp.editMessageForReceiver": "Edit Message for Recipient",
   "buttons.cancel": "Cancel",
